scdf/kind/test/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:latest
        ports:
        - containerPort: 8086
        env:
        - name: DOCKER_INFLUXDB_INIT_MODE
          value: setup
        - name: DOCKER_INFLUXDB_INIT_USERNAME
          value: admin
        - name: DOCKER_INFLUXDB_INIT_PASSWORD
          value: adminpass
        - name: DOCKER_INFLUXDB_INIT_ORG
          value: neo
        - name: DOCKER_INFLUXDB_INIT_BUCKET
          value: task_bucket
        - name: DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
          value: my-secret-token
