scdf/kind/test/ingress.yaml
# Ingress : 도메인 내부 Service에 연결시켜주는 Kubernetes의 HTTP 라우팅 기능.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scdf-ingress
spce:
  rules:
    - host: scdf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scdf
                port:
                  number: 9393
