scdf/kind/test/mariadb-deployment.yaml
# SCDF Task 실행 이력 등 메타데이터를 저장 할 MariaDB를 Kubernetes에 배포

apiVersion: app/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5
        ports:
        - containerPort: 3306
        env:
        - name: MYSQL_ROOT_PASSWORD
          value: rootpass
